k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itestapp
  template:
    metadata:
      labels:
        app: itestapp
    spec:
      containers:
        - name: itestapp
          image: samnotlazy/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: itestapp
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: itestapp
  type: NodePort
