k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-frontend
  template:
    metadata:
      labels:
        app: stock-frontend
    spec:
      containers:
        - name: stock-frontend
          image: mutedslow/stock-exchange-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: stock-frontend-service
spec:
  selector:
    app: stock-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
